--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "child_process": "^1.0.2",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
-    "oracledb": "^5.3.0"
+    "oracledb": "^5.3.0",
+    "tree-kill": "^1.2.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
